<resources>
    <string name="app_name">Grill_pork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">หน้าหลัก</string>
    <string name="service">บริการ</string>
    <string name="product">สินค้า</string>
    <string name="bill">เช็คบิล</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="edit_user">Enter Key Table</string>
    <string name="edit_pass">Enter password</string>


    <string name="make_an_service">Make an services</string>
    <string name="make_an_order">Make an order</string>
    <string name="dialog_title">Items available in a shop</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>

    //cardview
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSICS</string>
    <string name="backdrop_subtitle">This season top 20 music</string>
    <string name="action_add_favourite">Add to Favourites</string>

    <string-array name="shopping_item">
        <item>เปลี่ยนกระทะ</item>
        <item>เติมถ่าน</item>
        <item>เติมน้ำจิ้ม</item>
        <item>เติมกระดาษทิชชู่</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="product_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="sex_prompt">Choose a sex</string>
    <string-array name="sex_array">
        <item>Man</item>
        <item>Woman</item>
    </string-array>


</resources>
