<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/product"
            android:icon="@drawable/menu"
            android:title="@string/product" />
        <item
            android:id="@+id/service"
            android:icon="@drawable/service"
            android:title="@string/service" />
        <item
            android:id="@+id/bill"
            android:icon="@drawable/bill"
            android:title="@string/bill" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/shut"
            android:title="@string/logout" />
    </group>



</menu>
